# conformal-multimodal

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
benchmarks/: coverage_efficiency.py
conformal/: __init__.py  exceptions.py
conformal/core/: __init__.py  calibration.py  classification.py  conformal_predictor.py  predictor.py  quantile.py
conformal/metrics/: __init__.py  calibration.py  efficiency.py
conformal/multimodal/: __init__.py  fusion.py  mondrian.py
conformal/online/: __init__.py  tracker.py
conformal/risk/: __init__.py  control.py
docs/: index.html
tests/: test_conformal.py  test_coverage.py
