[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conformal-multimodal"
version = "0.3.0"
description = "Distribution-free uncertainty quantification for multimodal ML systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Spencer Kitaro Cottrell"}]
dependencies = ["numpy>=1.22", "scipy>=1.9"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "mypy>=1.5"]
torch = ["torch>=2.0"]
all = ["conformal-multimodal[dev,torch]"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
